[package]
name = "benchmark"
description = "Layer-3 performance validation benchmark for tze_hud"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "benchmark"
path = "src/main.rs"

[features]
headless = ["tze_hud_runtime/headless"]

[dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene", version = "0.1.0" }
tze_hud_input = { path = "../../crates/tze_hud_input", version = "0.1.0" }
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", version = "0.1.0" }
tze_hud_telemetry = { path = "../../crates/tze_hud_telemetry", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
