[package]
name = "benchmark"
description = "Layer-3 performance validation benchmark for tze_hud"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "benchmark"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "token_footprint_calibration"
path = "src/token_footprint_calibration.rs"

[features]
headless = ["tze_hud_runtime/headless"]

[dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene", version = "0.1.0" }
tze_hud_input = { path = "../../crates/tze_hud_input", version = "0.1.0" }
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", version = "0.1.0" }
tze_hud_telemetry = { path = "../../crates/tze_hud_telemetry", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
tiktoken-rs = { workspace = true }

[lints]
workspace = true
