[package]
name = "dashboard_tile_agent"
description = "Exemplar dashboard tile agent — raw tile API reference for tze_hud"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dashboard_tile_agent"
path = "src/main.rs"

[features]
headless = ["tze_hud_runtime/headless"]
## Enable dev-mode to allow `config_toml: None` (unrestricted capability grants).
## TEST/DEV ONLY — never use in production deployments.
dev-mode = ["tze_hud_runtime/dev-mode"]

[dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene" }
tze_hud_runtime = { path = "../../crates/tze_hud_runtime" }
tze_hud_protocol = { path = "../../crates/tze_hud_protocol" }
tze_hud_resource = { path = "../../crates/tze_hud_resource" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
image = { workspace = true, features = ["png"] }
uuid = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tze_hud_input = { path = "../../crates/tze_hud_input" }
# dev-mode activated for test builds: inline #[cfg(test)] mod tests calls
# HeadlessRuntime::new with config_toml: None (unrestricted capabilities).
# The released binary does NOT carry dev-mode; activate with `--features dev-mode`
# when running tests manually, or `cargo test` which picks up dev-dependencies.
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", features = ["dev-mode"] }

[lints]
workspace = true
