[package]
name = "render_artifacts"
description = "Layer 4 render-artifacts binary — generates developer visibility artifacts"
version.workspace = true
edition.workspace = true

[[bin]]
name = "render-artifacts"
path = "src/main.rs"

[[bin]]
name = "cooperative-projection-readback"
path = "src/bin/cooperative_projection_readback.rs"
required-features = ["headless"]

[features]
# Enable headless GPU rendering so Layer 1/2 images can be sourced live.
headless = ["dep:tze_hud_compositor", "dep:tze_hud_runtime", "tze_hud_runtime/headless"]

[dependencies]
tze_hud_validation = { path = "../../crates/tze_hud_validation" }
tze_hud_scene = { path = "../../crates/tze_hud_scene" }
tze_hud_telemetry = { path = "../../crates/tze_hud_telemetry" }
tze_hud_compositor = { path = "../../crates/tze_hud_compositor", features = ["headless"], optional = true }
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
