[package]
name = "vertical_slice"
description = "Reference vertical slice example for tze_hud"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vertical_slice"
path = "src/main.rs"

[features]
headless = ["tze_hud_runtime/headless"]
## Enable dev-mode to allow `config_toml: None` (unrestricted capability grants).
## Used with `--dev` CLI flag for the headless demo.  MUST NOT be used in
## production deployments — the default binary path uses production.toml instead.
dev-mode = ["tze_hud_runtime/dev-mode"]

[dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene" }
tze_hud_compositor = { path = "../../crates/tze_hud_compositor" }
# dev-mode is enabled here to support integration tests (tests/budget_assertions.rs)
# that use config_toml: None.  The binary itself does NOT use dev-mode at runtime:
# run_headless() loads production.toml by default and only bypasses governance when
# --dev is explicitly passed on the command line.  The `dev-mode` feature here is
# a test infrastructure concern, not a production runtime concern.
# NEVER ship a production binary without replacing this with a restricted config.
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", features = ["dev-mode"] }
tze_hud_protocol = { path = "../../crates/tze_hud_protocol" }
tze_hud_input = { path = "../../crates/tze_hud_input" }
tze_hud_telemetry = { path = "../../crates/tze_hud_telemetry" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
wgpu = { workspace = true }
winit = { workspace = true }
serde_json = { workspace = true }
