[package]
name = "vertical_slice"
description = "Reference vertical slice example for tze_hud"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vertical_slice"
path = "src/main.rs"

[features]
headless = ["tze_hud_runtime/headless"]
## Enable dev-mode to allow `config_toml: None` (unrestricted capability grants).
## Used with `--dev` CLI flag for the headless demo.  MUST NOT be used in
## production deployments — the default binary path uses production.toml instead.
dev-mode = ["tze_hud_runtime/dev-mode"]

[dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene" }
tze_hud_compositor = { path = "../../crates/tze_hud_compositor" }
tze_hud_runtime = { path = "../../crates/tze_hud_runtime" }
tze_hud_protocol = { path = "../../crates/tze_hud_protocol" }
tze_hud_input = { path = "../../crates/tze_hud_input" }
tze_hud_telemetry = { path = "../../crates/tze_hud_telemetry" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# dev-mode activated for test builds: tests/budget_assertions.rs uses config_toml: None
# (unrestricted capabilities). The released binary does NOT carry dev-mode; use
# `--features dev-mode` or `cargo test` to enable it for development.
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", features = ["dev-mode"] }
