[package]
name = "integration"
description = "Multi-crate integration tests for tze_hud"
version.workspace = true
edition.workspace = true

[[test]]
name = "multi_agent"
path = "multi_agent.rs"

# E13: Presence card tile builder — avatar upload, tile creation, node tree.
# Tests hud-apoe.1 acceptance criteria: avatar resource upload (BLAKE3 dedup),
# tile geometry (200x80, computed y-offset, z_order), 3-node flat tree
# (SolidColorNode + StaticImageNode + TextMarkdownNode), and batch submission.
[[test]]
name = "presence_card_tile"
path = "presence_card_tile.rs"

# hud-apoe.4: Disconnect detection, orphan handling, and reconnect-within-grace tests.
# Scene-graph-level tests using TestClock for deterministic time control.
# Covers all 6 acceptance criteria (AC1-AC6) plus no-repositioning (AC7).
[[test]]
name = "disconnect_orphan"
path = "disconnect_orphan.rs"

[[test]]
name = "trace_regression"
path = "trace_regression.rs"

# Soak and leak test suite (validation-framework/spec.md lines 298-310).
#
# Default run (fast CI, 10 seconds):
#   cargo test --test soak
#
# 1-hour CI run:
#   TZE_HUD_SOAK_SECS=3600 cargo test --test soak -- --nocapture
#
# 6-hour nightly run:
#   TZE_HUD_SOAK_SECS=21600 cargo test --test soak -- --nocapture
[[test]]
name = "soak"
path = "soak.rs"

# E12.6: V1 thesis proof — capstone test demonstrating all 7 v1 success criteria.
# Aggregates evidence from Layers 0-4, multi-agent integration, zone publish,
# headless rendering, and performance budgets into a structured proof report.
#
# Run:
#   cargo test --test v1_thesis -- --nocapture
[[test]]
name = "v1_thesis"
path = "v1_thesis.rs"

# Integration tests always run headless (no display server required).
# tze_hud_runtime is built with the headless feature unconditionally so
# all tests run in CI without a display. The workspace-level `headless`
# feature is re-exported here for downstream tooling that may set it.
#
# dev-mode is required because multi_agent.rs uses config_toml: None.
# Integration tests are separate binaries; cfg(test) is set in them but NOT
# in the library they link, so dev-mode must be enabled explicitly here.
[features]
headless = ["tze_hud_compositor/headless"]

[dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene" }
tze_hud_compositor = { path = "../../crates/tze_hud_compositor" }
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", features = ["headless", "dev-mode"] }
tze_hud_protocol = { path = "../../crates/tze_hud_protocol" }
tze_hud_resource = { path = "../../crates/tze_hud_resource" }
tze_hud_telemetry = { path = "../../crates/tze_hud_telemetry" }
tze_hud_validation = { path = "../../crates/tze_hud_validation" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
blake3 = { workspace = true }
