[package]
name = "integration"
description = "Multi-crate integration tests for tze_hud"
version.workspace = true
edition.workspace = true

[[test]]
name = "multi_agent"
path = "multi_agent.rs"

# E13: Presence card tile builder — avatar upload, tile creation, node tree.
# Tests hud-apoe.1 acceptance criteria: avatar resource upload (BLAKE3 dedup),
# tile geometry (200x80, computed y-offset, z_order), 3-node flat tree
# (SolidColorNode + StaticImageNode + TextMarkdownNode), and batch submission.
[[test]]
name = "presence_card_tile"
path = "presence_card_tile.rs"

# hud-apoe.4: Disconnect detection, orphan handling, and reconnect-within-grace tests.
# Scene-graph-level tests using TestClock for deterministic time control.
# Covers all 6 acceptance criteria (AC1-AC6) plus no-repositioning (AC7).
[[test]]
name = "disconnect_orphan"
path = "disconnect_orphan.rs"

# E13: Presence card periodic content updates and multi-agent coexistence.
# Tests hud-apoe.3 acceptance criteria: 30-second content update loop (SetTileRoot),
# human-friendly time formatting ("now", "30s ago", "1m ago", "2m ago"), and
# 3-agent concurrent coexistence (non-overlapping geometry, namespace isolation,
# concurrent content updates).
[[test]]
name = "presence_card_coexistence"
path = "presence_card_coexistence.rs"

# hud-i6yd.4: Atomic tile creation batch with resource upload.
# Tests: 48x48 PNG icon upload (BLAKE3 ResourceId), atomic MutationBatch
# (CreateTile + SetTileRoot 6-node tree + UpdateTileOpacity + UpdateTileInputMode),
# partial failure atomicity, z_order=100 in agent-owned band, and periodic
# content update (SetTileRoot) with active/expired lease checks.
[[test]]
name = "dashboard_tile_creation"
path = "dashboard_tile_creation.rs"

# hud-i6yd.5: HitRegionNode input capture, local feedback, and focus cycling.
# Tests: PointerDown/Up events on Refresh/Dismiss buttons, hover enter/leave,
# auto_capture + release_on_up semantics, focus cycling Tab/Shift+Tab,
# focus ring bounds, FocusGainedEvent/FocusLostEvent dispatch, cross-tile Tab,
# and keyboard-only activation via NAVIGATE_NEXT + ACTIVATE.
[[test]]
name = "dashboard_tile_input"
path = "dashboard_tile_input.rs"

# hud-i6yd.8: Full lifecycle user-test and headless integration scenarios.
# Tests: complete connect→lease→upload→create→update→Refresh→Dismiss lifecycle,
# disconnect-during-lifecycle (orphan + badge + grace-period cleanup),
# namespace isolation throughout lifecycle, and three headless scenarios
# (tile creation, pointer hit-test, lease TTL expiry) — all without GPU.
[[test]]
name = "dashboard_tile_lifecycle"
path = "dashboard_tile_lifecycle.rs"

[[test]]
name = "trace_regression"
path = "trace_regression.rs"

# Soak and leak test suite (validation-framework/spec.md lines 298-310).
#
# Default run (fast CI, 10 seconds):
#   cargo test --test soak
#
# 1-hour CI run:
#   TZE_HUD_SOAK_SECS=3600 cargo test --test soak -- --nocapture
#
# 6-hour nightly run:
#   TZE_HUD_SOAK_SECS=21600 cargo test --test soak -- --nocapture
[[test]]
name = "soak"
path = "soak.rs"

# E12.6: V1 thesis proof — capstone test demonstrating all 7 v1 success criteria.
# Aggregates evidence from Layers 0-4, multi-agent integration, zone publish,
# headless rendering, and performance budgets into a structured proof report.
#
# Run:
#   cargo test --test v1_thesis -- --nocapture
[[test]]
name = "v1_thesis"
path = "v1_thesis.rs"

# hud-hzub.4: Subtitle streaming breakpoint reveal — MCP and gRPC publish path verification.
# Tests: gRPC ZonePublish with stream_text + breakpoints forwarded to compositor,
# empty breakpoints = immediate reveal, replacement cancels streaming, gRPC/MCP parity,
# list_zones subtitle zone metadata (contention_policy, accepted_media_types).
[[test]]
name = "subtitle_streaming"
path = "subtitle_streaming.rs"

[[test]]
name = "text_stream_portal_surface"
path = "text_stream_portal_surface.rs"

[[test]]
name = "text_stream_portal_adapter"
path = "text_stream_portal_adapter.rs"

[[test]]
name = "text_stream_portal_coalescing"
path = "text_stream_portal_coalescing.rs"

[[test]]
name = "text_stream_portal_governance"
path = "text_stream_portal_governance.rs"

# Integration tests always run headless (no display server required).
# tze_hud_runtime is built with the headless feature unconditionally so
# all tests run in CI without a display. The workspace-level `headless`
# feature is re-exported here for downstream tooling that may set it.
#
# dev-mode is required because multi_agent.rs uses config_toml: None.
# Integration tests are separate binaries; cfg(test) is set in them but NOT
# in the library they link, so dev-mode must be enabled explicitly here.
[features]
headless = ["tze_hud_compositor/headless"]

[dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene" }
tze_hud_input = { path = "../../crates/tze_hud_input" }
tze_hud_compositor = { path = "../../crates/tze_hud_compositor" }
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", features = ["headless", "dev-mode"] }
tze_hud_protocol = { path = "../../crates/tze_hud_protocol" }
tze_hud_resource = { path = "../../crates/tze_hud_resource" }
tze_hud_telemetry = { path = "../../crates/tze_hud_telemetry" }
tze_hud_validation = { path = "../../crates/tze_hud_validation" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
blake3 = { workspace = true }
